--- a/index.html
+++ b/index.html
@@ -198,9 +198,7 @@
           <h1 class="text-6xl font-bold mb-4">Kamronbek & Nafisabonu</h1>
           <div class="divider"></div>
           <p class="text-2xl mb-8">Приглашаем вас на нашу свадьбу!</p>
-          <a href="https://forms.gle/your-google-form-link" target="_blank" class="btn px-6 py-3 font-semibold">
-            Подтвердить участие
-          </a>
+        
         </div>
       </div>
     </div>
@@ -211,10 +209,10 @@
     <div class="content fade-in">
       <h2 class="text-4xl font-bold mb-6">Детали мероприятия</h2>
       <div class="divider"></div>
-      <p class="text-xl max-w-2xl mb-4">Дата: 7 июля 2025 года</p>
-      <p class="text-xl max-w-2xl mb-4">Время: 15:00</p>
-      <p class="text-xl max-w-2xl mb-8">Место: Ресторан "Звездный", ул. Солнечная, 12, Москва</p>
-      <a href="https://forms.gle/your-google-form-link" target="_blank" class="btn px-6 py-3 font-semibold">
+      <p class="text-xl max-w-2xl mb-4">Дата: 19 июля 2025 года</p>
+      <p class="text-xl max-w-2xl mb-4">Время: 19:00</p>
+      <p class="text-xl max-w-2xl mb-8">Место: Ресторан "Diyora", ул. Солнечная, 12, Москва</p>
+      <a href="" target="_blank" class="btn px-6 py-3 font-semibold">
         Подтвердить участие
       </a>
     </div>
