--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     body {
       font-family: 'Inter', sans-serif;
       overflow-x: hidden;
-      background-color: #1a1a1a;
-      color: #e6d7b2;
+      background-color: #f5f5f5;
+      color: #4a3f1f;
       margin: 0;
     }
     .hero-section {
       position: relative;
-      background-color: #2c2c2c;
+      background-color: #fffaf0;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -36,16 +36,16 @@
       width: 100%;
       height: auto;
       object-fit: cover;
-      border: 3px solid #b8860b;
+      border: 3px solid #d4af37;
       border-radius: 10px;
-      box-shadow: 0 8px 20px rgba(184, 134, 11, 0.4);
+      box-shadow: 0 8px 20px rgba(212, 175, 55, 0.3);
     }
     .hero-text-overlay {
       position: absolute;
       bottom: 0;
       left: 0;
       right: 0;
-      background: rgba(0, 0, 0, 0.7);
+      background: rgba(255, 250, 240, 0.8);
       padding: 1rem;
       display: flex;
       flex-direction: column;
@@ -53,7 +53,7 @@
       justify-content: center;
     }
     .section-bg {
-      background: linear-gradient(135deg, #1a1a1a 0%, #2c2c2c 100%);
+      background: linear-gradient(135deg, #fffaf0 0%, #f5f5f5 100%);
       position: relative;
       overflow: hidden;
       display: flex;
@@ -68,7 +68,7 @@
       right: 0;
       bottom: 0;
       background: url('https://www.transparenttextures.com/patterns/gold-flower.png');
-      opacity: 0.2;
+      opacity: 0.1;
       z-index: 0;
     }
     .content {
@@ -80,10 +80,10 @@
     }
     .btn {
       transition: all 0.3s ease;
-      border: 2px solid #b8860b;
-      background: #2c2c2c;
-      color: #e6d7b2;
-      box-shadow: 0 4px 15px rgba(184, 134, 11, 0.3);
+      border: 2px solid #d4af37;
+      background: #fffaf0;
+      color: #4a3f1f;
+      box-shadow: 0 4px 15px rgba(212, 175, 55, 0.3);
       border-radius: 9999px;
       padding: 0.75rem 1.5rem;
       font-size: 1rem;
@@ -93,8 +93,8 @@
     }
     .btn:hover {
       transform: scale(1.05);
-      background: #b8860b;
-      color: #1a1a1a;
+      background: #d4af37;
+      color: #fffaf0;
     }
     .btn::before {
       content: '✿';
@@ -102,7 +102,7 @@
       left: -20px;
       top: 50%;
       transform: translateY(-50%);
-      color: #b8860b;
+      color: #d4af37;
       font-size: 1rem;
       opacity: 0.7;
     }
@@ -112,19 +112,19 @@
       right: -20px;
       top: 50%;
       transform: translateY(-50%);
-      color: #b8860b;
+      color: #d4af37;
       font-size: 1rem;
       opacity: 0.7;
     }
     section {
       min-height: 100vh;
       scroll-snap-align: start;
-      border-bottom: 2px solid #b8860b;
+      border-bottom: 2px solid #d4af37;
       padding: 1rem;
     }
     h1, h2 {
       font-family: 'Playfair Display', serif;
-      text-shadow: 0 3px 10px rgba(0, 0, 0, 0.6);
+      text-shadow: 0 2px 8px rgba(74, 63, 31, 0.3);
       position: relative;
     }
     h1::before, h2::before {
@@ -133,7 +133,7 @@
       left: -30px;
       top: 50%;
       transform: translateY(-50%);
-      color: #b8860b;
+      color: #d4af37;
       font-size: 1.2rem;
       opacity: 0.6;
     }
@@ -143,7 +143,7 @@
       right: -30px;
       top: 50%;
       transform: translateY(-50%);
-      color: #b8860b;
+      color: #d4af37;
       font-size: 1.2rem;
       opacity: 0.6;
     }
@@ -167,27 +167,29 @@
       position: relative;
     }
     .countdown div {
-      background: #2c2c2c;
+      background: #fffaf0;
       padding: 0.5rem 1rem;
       border-radius: 8px;
-      border: 1px solid #b8860b;
+      border: 1px solid #d4af37;
       text-align: center;
       min-width: 60px;
-      box-shadow: 0 4px 10px rgba(184, 134, 11, 0.3);
+      box-shadow: 0 4px 10px rgba(212, 175, 55, 0.3);
     }
     .countdown span {
       display: block;
       font-size: 1.5rem;
       font-weight: bold;
+      color: #4a3f1f;
     }
     .countdown label {
       font-size: 0.875rem;
       text-transform: uppercase;
+      color: #4a3f1f;
     }
     .divider {
       width: 100px;
       height: 3px;
-      background: linear-gradient(to right, transparent, #b8860b, transparent);
+      background: linear-gradient(to right, transparent, #d4af37, transparent);
       margin: 1.5rem auto;
       position: relative;
     }
@@ -196,7 +198,7 @@
       position: absolute;
       width: 12px;
       height: 12px;
-      background: #b8860b;
+      background: #d4af37;
       border-radius: 50%;
       top: -4.5px;
     }
@@ -207,13 +209,13 @@
       right: -6px;
     }
     .details-card {
-      background: #2c2c2c;
-      border: 3px solid #b8860b;
+      background: #fffaf0;
+      border: 3px solid #d4af37;
       border-radius: 15px;
       padding: 2rem;
       max-width: 600px;
       width: 100%;
-      box-shadow: 0 10px 30px rgba(184, 134, 11, 0.4);
+      box-shadow: 0 10px 30px rgba(212, 175, 55, 0.3);
       animation: cardFadeIn 1.5s ease-in;
       position: relative;
       overflow: hidden;
@@ -226,7 +228,7 @@
       left: -50%;
       width: 200%;
       height: 200%;
-      background: radial-gradient(circle, rgba(184, 134, 11, 0.1) 0%, transparent 70%);
+      background: radial-gradient(circle, rgba(212, 175, 55, 0.1) 0%, transparent 70%);
       animation: glowPulse 6s ease-in-out infinite;
     }
     .details-card::after {
@@ -236,13 +238,13 @@
       left: 10px;
       right: 10px;
       bottom: 10px;
-      border: 1px dashed #b8860b;
+      border: 1px dashed #d4af37;
       border-radius: 10px;
       opacity: 0.3;
     }
     .corner-floral {
       position: absolute;
-      color: #b8860b;
+      color: #d4af37;
       font-size: 1.5rem;
       opacity: 0.5;
     }
@@ -284,6 +286,7 @@
       line-height: 1.75;
       margin-bottom: 1rem;
       letter-spacing: 0.05em;
+      color: #4a3f1f;
     }
     .details-text::before {
       content: '✿';
@@ -291,7 +294,7 @@
       left: -25px;
       top: 50%;
       transform: translateY(-50%);
-      color: #b8860b;
+      color: #d4af37;
       font-size: 1rem;
       opacity: 0.7;
     }
@@ -301,7 +304,7 @@
       right: -25px;
       top: 50%;
       transform: translateY(-50%);
-      color: #b8860b;
+      color: #d4af37;
       font-size: 1rem;
       opacity: 0.7;
     }
@@ -464,7 +467,7 @@
   <section class="hero-section floral-overlay">
     <div class="content fade-in">
       <div class="hero-img-container">
-        <img src="444.jpg" alt="Kamronbek и Nafisabonu" class="hero-img">
+        <img src="00.jpg" alt="Kamronbek и Nafisabonu" class="hero-img">
         <div class="hero-text-overlay">
           <h1 class="text-6xl font-bold mb-4">Kamronbek & Nafisabonu</h1>
           <div class="divider"></div>
@@ -494,8 +497,10 @@
         </div>
         <p class="details-text">Дата: 19 июля 2025 года</p>
         <p class="details-text">Время: 19:00</p>
-        <p class="details-text">Место: Ресторан "Diyora", Самаркандская область, Самаркандская кольцевая дорога, 27</p>
-      
+        <p class="details-text">Место: Ресторан "Звездный", ул. Солнечная, 12, Москва</p>
+        <a href="" target="_blank" class="btn px-6 py-3 font-semibold mt-4">
+          Подтвердить участие
+        </a>
       </div>
     </div>
   </section>
