--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
         </div>
         <p class="details-text">Дата: 19 июля 2025 года</p>
         <p class="details-text">Время: 19:00</p>
-        <p class="details-text">Место: Ресторан "Звездный", ул. Солнечная, 12, Москва</p>
+        <p class="details-text">Адресс: Ресторан "Diyora"</p>
         <a href="" target="_blank" class="btn px-6 py-3 font-semibold mt-4">
           Подтвердить участие
         </a>
